WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97897
[WebDatabase] Error code should be CONSTRAINT_ERR if a statement fails due to a constraint failure
https://bugs.webkit.org/show_bug.cgi?id=97897
Summary
[WebDatabase] Error code should be CONSTRAINT_ERR if a statement fails due to...
Chris Dumez
Reported
2012-09-28 05:19:17 PDT
As per the specification, if a statement fails due to a constraint failure, the error code needs to be CONSTRAINT_ERR. We currently use the generic DATABASE_ERR for this case. The Chromium implementation follows the spec and uses CONSTRAINT_ERR for this case.
Attachments
Patch
(7.52 KB, patch)
2012-09-28 05:56 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(7.45 KB, patch)
2012-09-28 06:09 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-09-28 05:56:29 PDT
Created
attachment 166228
[details]
Patch
Kentaro Hara
Comment 2
2012-09-28 06:02:06 PDT
Comment on
attachment 166228
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=166228&action=review
Looks good.
> Source/WebCore/ChangeLog:13 > + The new behavior is consistent with the Chromium implementation.
What do you mean?
Chris Dumez
Comment 3
2012-09-28 06:08:04 PDT
(In reply to
comment #2
)
> (From update of
attachment 166228
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=166228&action=review
> > Looks good. > > > Source/WebCore/ChangeLog:13 > > + The new behavior is consistent with the Chromium implementation. > > What do you mean?
My bad, I tested with Chromium earlier and it looked like it was using CONSTRAINT_ERR, however, I'm unable to reproduce now. I will remove this statement from the Changelog.
Chris Dumez
Comment 4
2012-09-28 06:09:33 PDT
Created
attachment 166233
[details]
Patch Remove incorrect statement about Chromium in the Changelog.
WebKit Review Bot
Comment 5
2012-09-28 06:44:27 PDT
Comment on
attachment 166233
[details]
Patch Clearing flags on attachment: 166233 Committed
r129886
: <
http://trac.webkit.org/changeset/129886
>
WebKit Review Bot
Comment 6
2012-09-28 06:44:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug