[WebDatabase] Error code should be CONSTRAINT_ERR if a statement fails due to a constraint failure https://bugs.webkit.org/show_bug.cgi?id=97897

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-09-28
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Use CONSTRAINT_ERR error code instead of the generic DATABASE_ERR
when a statement fails due to a constraint failure. This is documented
in the W3C specification:
http://dev.w3.org/html5/webdatabase/#dom-sqlexception-code-constraint

Tests: storage/websql/sql-error-codes.html

* Modules/webdatabase/SQLStatement.cpp:
(WebCore::SQLStatement::execute):
* Modules/webdatabase/SQLStatementSync.cpp:
(WebCore::SQLStatementSync::execute):
* platform/sql/SQLiteDatabase.cpp:
(WebCore):
* platform/sql/SQLiteDatabase.h:
(WebCore):

LayoutTests:

Update storage/websql/sql-error-codes.html test case to check
that the CONSTRAINT_ERR error code is used when a statement
fails due to a constraint failure.

* platform/chromium/storage/websql/sql-error-codes-expected.txt:
* storage/websql/sql-error-codes-expected.txt:
* storage/websql/sql-error-codes.js:
(testConstraintFailure):
(runTest):

Canonical link: https://commits.webkit.org/115894@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129886 268f45cc-cd09-0410-ab3c-d52691b4dbfc